src/validation/tests/snapshots/rusty__validation__tests__naming_validation_test__WCHAR.snap
---
source: src/validation/tests/naming_validation_test.rs
expression: "&result"
---
error: WCHAR can not be used as a name because it is a built-in datatype
  ┌─ <internal>:1:6
  │
1 │ TYPE WCHAR : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^ WCHAR can not be used as a name because it is a built-in datatype

error: WCHAR: Ambiguous datatype.
  ┌─ <internal>:1:6
  │
1 │ TYPE WCHAR : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^ WCHAR: Ambiguous datatype.


